--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1384,32 +1384,200 @@ body {
 .cid-reWhoq4U2z {
   background-color: #37aaa3;
 }
-.cid-rgGbkzstXY {
+.cid-rgZu07L4hU {
+  background-image: url("../../../assets/images/mbr-1920x1152.jpg");
+}
+.cid-rgZu07L4hU .mbr-media span {
+  font-size: 48px;
+  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 6rem;
+  height: 6rem;
+  line-height: 6rem;
+  position: relative;
+  display: inline-block;
+  transition: all 0.25s;
+  color: #353535;
+}
+.cid-rgZu07L4hU .mbr-media span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-35%);
+  -moz-transform: translateX(-35%);
+  -ms-transform: translateX(-35%);
+  -o-transform: translateX(-35%);
+  transform: translateX(-35%);
+}
+.cid-rgZu07L4hU .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-rgZu07L4hU .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-rgZu07L4hU .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-rgZu07L4hU a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-rgZu07L4hU a.close:hover {
+  color: #ffffff;
+}
+.cid-rgZu07L4hU H1 {
+  color: #ffffff;
+}
+.cid-rgZu07L4hU P {
+  color: #ffffff;
+}
+.cid-rgYrMqgM4e {
   padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #b2ccd2;
+  padding-bottom: 15px;
+  background-image: url("../../../assets/images/mbr-1920x1168.jpg");
 }
-.cid-rgGbkzstXY .title {
-  margin-bottom: 2rem;
-}
-.cid-rgGbkzstXY .mbr-section-subtitle {
+.cid-rgYrMqgM4e .mbr-section-subtitle {
   color: #767676;
-}
-.cid-rgGbkzstXY a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-rgGbkzstXY a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-rgGbkzstXY .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
-}
-.cid-rgGbkzstXY .input-group-btn {
-  display: block;
   text-align: center;
+  font-weight: 300;
+}
+.cid-rgYrMqgM4e .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #de4150;
+  margin-left: 2rem;
+}
+.cid-rgYrMqgM4e .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-rgYrMqgM4e .time-line-date-content {
+  margin-right: 2rem;
+}
+.cid-rgYrMqgM4e .time-line-date-content p {
+  padding: 2rem 2.5rem;
+  background: #de4150;
+  float: right;
+}
+.cid-rgYrMqgM4e .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-rgYrMqgM4e .timeline-element:hover .mbr-timeline-date {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rgYrMqgM4e .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rgYrMqgM4e .mbr-timeline-date,
+.cid-rgYrMqgM4e .timeline-text-content {
+  transition: all .4s;
+}
+.cid-rgYrMqgM4e .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-rgYrMqgM4e .reverse .timeline-text-content {
+  margin-right: 2rem;
+  margin-left: 0;
+}
+.cid-rgYrMqgM4e .reverse .time-line-date-content {
+  margin-left: 2rem;
+  margin-right: 0rem;
+}
+.cid-rgYrMqgM4e .reverse .time-line-date-content p {
+  float: left;
+}
+.cid-rgYrMqgM4e .iconBackground {
+  position: absolute;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 30px;
+  display: inline-block;
+  background-color: #de4150;
+  top: 20px;
+  margin-left: -10px;
+}
+.cid-rgYrMqgM4e .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #de4150;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-rgYrMqgM4e .iconBackground {
+    left: 0 !important;
+  }
+  .cid-rgYrMqgM4e .separline:before {
+    left: 0!important;
+  }
+  .cid-rgYrMqgM4e .timeline-text-content {
+    margin-left: 0 !important;
+  }
+  .cid-rgYrMqgM4e .time-line-date-content {
+    margin-right: 0 !important;
+  }
+  .cid-rgYrMqgM4e .time-line-date-content p {
+    float: left !important;
+  }
+  .cid-rgYrMqgM4e .reverse .time-line-date-content {
+    margin-left: 0 !important;
+  }
+  .cid-rgYrMqgM4e .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-rgYrMqgM4e .mbr-timeline-date B {
+  color: #ffffff;
+}
+.cid-rgYrMqgM4e .mbr-timeline-title {
+  color: #ffffff;
+}
+.cid-rgYrMqgM4e .mbr-timeline-text {
+  color: #ffffff;
+}
+.cid-rgYrMqgM4e .mbr-timeline-date {
+  color: #ffffff;
+}
+.cid-rgYrMqgM4e .mbr-section-title B {
+  color: #ffffff;
+}
+.cid-rgYrMqgM4e .mbr-section-subtitle B {
+  color: #ffffff;
+}
+.cid-rgZwdu81qu {
+  padding-top: 15px;
+  padding-bottom: 60px;
+  background-color: #de4150;
 }
 .cid-rgCU2TBHfl {
   padding-top: 90px;
@@ -1439,24 +1607,25 @@ body {
 .cid-rgCU2TBHfl .card {
   padding-bottom: 1.5rem;
 }
-.cid-rgD4fwMT6P {
-  padding-top: 120px;
-  padding-bottom: 0px;
-  background-color: #cc7a7c;
-}
-.cid-rgCSHGg2ag {
-  padding-top: 0px;
-  padding-bottom: 120px;
-  background: linear-gradient(45deg, #cc7a7c, #cc7a7c);
+.cid-rgZy5UzbGV {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #149dcc;
+  background: linear-gradient(45deg, #149dcc, #000000);
 }
 @media (min-width: 992px) {
-  .cid-rgCSHGg2ag .mbr-figure {
-    padding-left: 4rem;
+  .cid-rgZy5UzbGV .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-rgCSHGg2ag .mbr-figure {
-    padding-top: 3rem;
+  .cid-rgZy5UzbGV .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rgZy5UzbGV .mbr-text {
+    text-align: center;
   }
 }
 .cid-rgD7Ow8uZQ {
