--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1680,7 +1680,7 @@ body {
   color: #ff8692;
 }
 .cid-rh5DOxNvhE .plan-title B {
-  color: #767676;
+  color: #37aaa3;
 }
 .cid-rgZy5UzbGV {
   padding-top: 90px;
