--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1384,6 +1384,12 @@ body {
 .cid-reWhoq4U2z {
   background-color: #37aaa3;
 }
+.cid-reWhoq4U2z H1 {
+  color: #ffffff;
+}
+.cid-reWhoq4U2z SPAN {
+  color: #ffffff;
+}
 .cid-rgZu07L4hU {
   background-image: url("../../../assets/images/mbr-1920x1152.jpg");
 }
